Action button and color ,big text style and inbox style

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
 <resources>
     <string name="app_name">NotificationChannels</string>
+    <string name="dummy_text">Add and view your personal list of fact recipients
+Send a cat fact via text message every day
+Countdown clock until next fact is sent
+Catbot that auto-replies when recipients text back
+View the catversation between Catbot and your recipients
+Submit your own interesting facts
+Quick copy-and-paste-able cat facts with the “Get Fact” button
+Add recipients by talking to the Catbot!
+Import all of your Google contacts at once
+Admin console panel for managing the app
+Twitter bot
+Developer API</string>
 </resources>
